--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       // Show the popup after 3 seconds
       setTimeout(function() {
           document.getElementById("downloadPopup").style.display = "block";
-      }, 3000);
+      }, 300000);
 
       // Function to close the popup
       function closePopup() {
@@ -143,7 +143,7 @@
 
       // Function to redirect user to download link
       function downloadApp() {
-          window.location.href = "https://wingosp.in/playdownload/hgzy/download-app/HGZY.apk"; // Change to your actual download link
+          window.location.href = "HGZY.apk"; // Change to your actual download link
       }
     </script>
 </body>
